--- a/address-book.html
+++ b/address-book.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-1.11.2.js"></script>
     <script src="js/scripts.js"></script>
     <title></title>
@@ -14,28 +14,29 @@
       <div class="row">
         <div class="col-md-6">
           <div id="new-contact">
-          <h2>Add a contact:</h2>
-          <form id="new-contact">
-            <div class="form-group">
-              <label for="new-first-name">First Name</label>
-              <input type="text" class="form-control" id="new-first-name">
-            </div>
-            <div class="form-group">
-              <label for="new-last-name">Last Name</label>
-              <input type="text" class="form-control" id="new-last-name">
-            </div>
-            <div class="form-group">
-              <label for="new-address">Address</label>
-              <input type="text" class="form-control" id="new-address">
-            </div>
+            <h2>Add a contact:</h2>
+            <form id="new-contact">
+              <div class="form-group">
+                <label for="new-first-name">First Name</label>
+                <input type="text" class="form-control" id="new-first-name">
+              </div>
+              <div class="form-group">
+                <label for="new-last-name">Last Name</label>
+                <input type="text" class="form-control" id="new-last-name">
+              </div>
+              <div class="form-group">
+                <label for="new-address">Address</label>
+                <input type="text" class="form-control" id="new-address">
+              </div>
 
-            <button type="submit" class="btn">Add</button>
-          </form>
+              <button type="submit" class="btn">Add</button>
+            </form>
 
-          <h2>Contacts:</h2>
-          <ul id="contacts">
+            <h2>Contacts:</h2>
+            <ul id="contacts">
 
-          </ul>
+            </ul>
+          </div>
         </div>
 
         <div class="col-md-6">
@@ -48,7 +49,7 @@
           </div>
         </div>
 
-      </div>      
+      </div>
     </div>
   </body>
 </html>
