--- a/address-book.html
+++ b/address-book.html
@@ -25,8 +25,24 @@
                 <input type="text" class="form-control" id="new-last-name">
               </div>
               <div class="form-group">
-                <label for="new-address">Address</label>
-                <input type="text" class="form-control" id="new-address">
+                <label for="new-street1">Address Line 1</label>
+                <input type="text" class="form-control" id="new-street1" placeholder="Street Address, P.O. box, company name, c/o">
+              </div>
+              <div class="form-group">
+                <label for="new-street2">Address Line 2</label>
+                <input type="text" class="form-control" id="new-street2" placeholder="Apartment, suite, unit, building, floor, etc.">
+              </div>
+              <div class="form-group">
+                <label for="new-city">City</label>
+                <input type="text" class="form-control" id="new-city">
+              </div>
+              <div class="form-group">
+                <label for="new-state">State</label>
+                <input type="text" class="form-control" id="new-state">
+              </div>
+              <div class="form-group">
+                <label for="new-zip">Zip</label>
+                <input type="text" class="form-control" id="new-zip">
               </div>
 
               <button type="submit" class="btn">Add</button>
@@ -43,9 +59,14 @@
           <div id="show-contact">
             <h2></h2>
 
-            <p>First Name: <span class="first-name"></span></p>
-            <p>Last Name: <span class="last-name"></span></p>
             <p>Address: <span class="address"></span></p>
+            <!-- <p>Last Name: <span class="last-name"></span></p>
+            <p>Address Line 1: <span class="new-street1"></span></p>
+            <p>Address Line 2: <span class="new-street2"></span></p>
+            <p>City: <span class="new-city"</span></p>
+            <p>State: <span class="new-state"</span></p>
+            <p>Zip: <span class="new-zip"</span></p> -->
+
           </div>
         </div>
 
