--- a/triangle-tracker.html
+++ b/triangle-tracker.html
@@ -36,6 +36,8 @@
     <h4> Scalene </h4>
     <ul id='scalenes'></ul>
 
-
+    <form id="reset">
+      <a href="javascript:location.reload(true)"><button id="reset-btn" class="btn btn-large btn-warning">Refresh</button></a>
+    </form>
   </body>
 </html>
