fix wording in html

--- a/triangle-tracker.html
+++ b/triangle-tracker.html
@@ -8,7 +8,7 @@
     <title></title>
   </head>
   <body>
-    <h2>Add a triangle.</h2>
+    <h2>Enter three numbers to see what kind of triangle you can make</h2>
     <form id='new-triangle'>
       <div class='container'>
         <div class='form-group'>
