--- a/triangle-tracker.html
+++ b/triangle-tracker.html
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <button type="submit" class="btn">Click to see</button>
+      <button type="submit" class="btn btn-large btn-primary">Click to see</button>
     </form>
 
     <h3>Triangles:</h3>
